# Task-Manager-Course-Project-

./: .gitignore  CMakeLists.txt  main.cpp
data/: taskmanager.db
include/Interface/: AuthorizationMenu.h
include/interfaces/: AuthorizationMenu.h  Interfaces.h  WindowOptions.h
resources/: resources.qrc
resources/styles/: addTaskMenu.qss  applicationMenu.qss  authorization.qss  calendarWindow.qss  chatBotWindow.qss  editTasks.qss  editingTaskMenu.qss  registration.qss  statisticsWindow.qss  taskCardWidget.qss  titlebar.qss
src/: main.cpp
src/ProgramInterface/AuthorizationМenu/: AuthorizationМenu.cpp
src/core/: ApplicationMenuLogic.cpp  AuthorizationLogic.cpp  CalendarWindowLogic.cpp  RegistrationLogic.cpp  StatisticsWindowLogic.cpp
src/core/ChatBot/: ChatBot.h
src/core/appController/: AppController.cpp  AppController.h
src/core/applicationMenuLogic/: ApplicationMenuLogic.cpp  applicationMenuLogic.cpp
src/core/authorizationLogic/: AuthorizationLogic.cpp
src/core/editTasksLogic/: AddTaskDialog.cpp  AddTaskDialog.h  AddTaskWidgetMenu.cpp  EditTasksLogic.cpp  TaskCardWidget.cpp  TaskCardWidget.h  editTasksLogic.cpp
src/core/registrationLogic/: RegistrationLogic.cpp  registrationLogic.cpp
src/gui/: AbstractMainWindow.cpp  AbstractMainWindow.h  AddTaskWidgetMenu.cpp  AppController.cpp  AppController.h  ApplicationMenu.cpp  Authorization.cpp  CalendarWindow.cpp  ChatBotWindow.cpp  EditTasks.cpp  EditingTaskMenu.cpp  Registration.cpp  StatisticsWindow.cpp  TaskCardWidget.cpp  abstractMainWindow.cpp  abstractMainWindow.h
src/gui/abstractMainWindow/: AbstractMainWindow.cpp  AbstractMainWindow.h
src/gui/appController/: AppController.cpp  AppController.h
src/gui/applicationMenu/: ApplicationMenu.cpp  ApplicationMenu.h
src/gui/authorization/: Authorization.cpp  Authorization.h
src/gui/categoryPieChart/: CategoryPieChart.cpp  CategoryPieChart.h
src/gui/registration/: Registration.cpp  Registration.h
src/gui/titlebar/: TitleBar.cpp  TitleBar.h
src/programInterface/authorizationMenu/: AuthorizationMenu.cpp
src/tempFiles/: smth 
src/utils/hashing/: Hashing.cpp
src/windows/: ApplicationMenu.h  Authorization.h  CalendarWindow.cpp  CalendarWindow.h  CalendarWindowLogic.cpp  ChatBotWindow.cpp  ChatBotWindow.h  EditTasks.h  Registration.h  StatisticsWindow.cpp  StatisticsWindow.h  StatisticsWindowLogic.cpp
(+15 files in other folders)
